--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -24,13 +24,13 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <section id="map">
-  </section>
+  <section id="map"></section>
   <style>
   section#map {
     height: 100vh;
   }
   </style>
+
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="dist/js/app.js"></script>
 </body>
