feat(download): Add download button for geojson

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
      <form>
        <input type="text" id="route-id" name="id" value="" />
        <!--<input type="text" name="color" value="#fff"/>-->
-       <input type="submit" id="done" value="done" />
      </form>
      <button id="create" value="new">New route</button>
      <button id="undo" value="undo">Undo step</button>
+     <a id="download">Download geojson</a>
    </footer>
   </main>
   <style>
